2023-11-15T00:45:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6871371929 # 2078
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-15
* notice: last 14d: unq all: 47 87
* notice: prev accum: outdated-unq outdated-all / unq all: 1898 5679 / 1949 5751
* notice: next accum: outdated-unq outdated-all / unq all: 1900 5682 / 1960 5769
* notice: prev exec diff / last date diff / accum: unq all: +11 +18 -0 -0 / +13 +20 -0 -0 / 13 20
* notice: removed / changed dates: [2023-10-31] / [2023-11-14]

2023-11-14T16:10:48Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6866342217 # 2077
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-14
* notice: last 14d: unq all: 38 71
* notice: prev accum: outdated-unq outdated-all / unq all: 1898 5679 / 1947 5749
* notice: next accum: outdated-unq outdated-all / unq all: 1898 5679 / 1949 5751
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -1 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-10-31 2023-11-14]

2023-11-14T00:44:19Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6857628490 # 2075
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-14
* notice: last 14d: unq all: 36 70
* notice: prev accum: outdated-unq outdated-all / unq all: 1898 5679 / 1946 5747
* notice: next accum: outdated-unq outdated-all / unq all: 1898 5679 / 1947 5749
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +11 +13 -0 -0 / 11 13
* notice: removed / changed dates: [] / [2023-11-13]

2023-11-13T16:12:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6852642678 # 2074