@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-11-15T00:45:35Z",
-  "count_outdated" : 5682,
-  "uniques_outdated" : 1900,
+  "timestamp" : "2023-11-16T00:46:43Z",
+  "count_outdated" : 5688,
+  "uniques_outdated" : 1904,
   "count" : 5769,
   "uniques" : 1960,
   "clones" : [
-    {
-      "timestamp": "2023-11-01T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 1, 6 ],
-      "count_decinc": [ 0, 6 ],
-      "uniques": 4,
-      "uniques_minmax": [ 1, 4 ],
-      "uniques_decinc": [ 0, 4 ]
-    },
     {
       "timestamp": "2023-11-02T00:00:00Z",
       "count": 3,
