@@ -1,12 +1,7 @@
 {
-  "count": 87,
-  "uniques": 47,
+  "count": 81,
+  "uniques": 45,
   "clones": [
-    {
-      "timestamp": "2023-11-01T00:00:00Z",
-      "count": 6,
-      "uniques": 4
-    },
     {
       "timestamp": "2023-11-02T00:00:00Z",
       "count": 3,
