@@ -1,3 +1,12 @@
+2023-11-16T00:46:43Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6884758936 # 2081
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-16
+* notice: last 14d: unq all: 45 81
+* notice: prev accum: outdated-unq outdated-all / unq all: 1900 5682 / 1960 5769
+* notice: next accum: outdated-unq outdated-all / unq all: 1904 5688 / 1960 5769
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-11-01] / []
+
 2023-11-15T00:45:35Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6871371929 # 2078
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-15
